internal links corrections

--- a/Pages/contact-english.html
+++ b/Pages/contact-english.html
@@ -109,9 +109,9 @@
                 </li>
                 <li>
                   <a
-                    href="./files.html"
+                    href="./files-english.html"
                     aria-label="Download my files and documents"
-                    >Download My Files</a
+                    >My Files</a
                   >
                 </li>
               </ul>
