--- a/Pages/files-english.html
+++ b/Pages/files-english.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-page="files-english + german">
+<html lang="en" data-page="files-english">
   <head>
     <meta charset="UTF-8" />
     <meta
@@ -109,9 +109,9 @@
                 </li>
                 <li>
                   <a
-                    href="./files.html"
+                    href="./files-english.html"
                     aria-label="Download my files and documents"
-                    >Download My Files</a
+                    >My Files</a
                   >
                 </li>
               </ul>
@@ -217,6 +217,18 @@
           </div>
         </div>
       </section>
+      <div class="languages">
+        <a href="./files-german.html" aria-label="Change Language to German">
+          <p>
+            Sprache <br />
+            änderen
+          </p>
+          <img
+            src="../Language Logos/German_Logo.webp"
+            alt="Change Language to German"
+          />
+        </a>
+      </div>
 
       <div class="backtotop">
         <a href="#" aria-label="Back to top">
