--- a/Pages/files-german.html
+++ b/Pages/files-german.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="de" data-page="contact-german">
+<html lang="de" data-page="files-german">
   <head>
     <meta charset="UTF-8" />
     <meta
@@ -19,7 +19,7 @@
       property="og:url"
       content="https://www.facebook.com/profile.php?id=61563925780935"
     />
-    <meta name="author" content="Kathrin Peled Draclady" />
+    <meta name="author" content="Kathrin Peled Draculady" />
     <meta name="robots" content="index, follow" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -79,7 +79,7 @@
 
       gtag("config", "G-PCYQWXDRBG");
     </script>
-    <title id="index-german">Kathrin Peled Portfolio</title>
+    <title id="portfolio-german">Kathrin Peled Portfolio</title>
     <link
       rel="icon"
       href="../Icons/Draculady-icon.webp"
@@ -124,27 +124,27 @@
                 <li>
                   <a
                     href="../index-german.html#skills"
-                    aria-label="Skills and Tools"
+                    aria-label="Fähigkeiten und Werkzeuge"
                     >Fähigkeiten und Werkzeuge</a
                   >
                 </li>
                 <li>
                   <a
-                    href="../Pages/portfolio-german.html#projects-heading"
-                    aria-label="All Projects"
+                    href="./portfolio-german.html#projects-heading"
+                    aria-label="Alle Projekte"
                     >Alle Projekte</a
                   >
                 </li>
                 <li>
                   <a
-                    href="../Pages/portfolio-german.html#1st-module"
-                    aria-label="Basic Projects"
+                    href="./portfolio-german.html#1st-module"
+                    aria-label="Grundlegende Projekte"
                     >Grundlegende Projekte</a
                   >
                 </li>
                 <li>
                   <a
-                    href="../Pages/portfolio-german.html#2nd-module"
+                    href="./portfolio-german.html#2nd-module"
                     aria-label="JavaScript projects section"
                     >JS Projekte</a
                   >
@@ -152,7 +152,7 @@
               </ul>
             </li>
             <li>
-              <a href="../Pages/contact-deutsch.html" aria-label="Contact"
+              <a href="../index-german.html#contact" aria-label="Kontakt"
                 >Kontakt</a
               >
             </li>
@@ -164,143 +164,65 @@
       </div>
     </header>
     <main>
-      <section id="contact" aria-labelledby="contact-heading">
-        <div class="container">
-          <div class="h2-title">
-            <h2 id="contact-heading">Kontaktiere mich</h2>
-          </div>
-          <div class="contact-options-divs">
-            <div class="contact-form">
-              <div class="container">
-                <div class="h3-title">
-                  <h3>Schick mir eine Nachricht</h3>
-                </div>
-                <div class="form">
-                  <form action="https://formspree.io/f/xyzgryqo" method="POST">
-                    <label for="name">Ihr Name:</label> <br />
-                    <input type="text" id="name" name="name" required />
-                    <br />
-                    <label for="email">Ihre E-Mail:</label> <br />
-                    <input type="email" id="email" name="_replyto" required />
-                    <br />
-                    <label for="message">Ihre Nachricht:</label> <br />
-                    <textarea id="message" name="message" required></textarea>
-                    <br />
-                    <button type="submit">Senden</button>
-                  </form>
-                </div>
-              </div>
+      <section class="download-files">
+        <div class="my-files">
+          <div class="container">
+            <div class="h3-title">
+              <h3>Lade Meine Dokumente Herunter</h3>
             </div>
-            <div class="contact-directly">
-              <div class="container">
-                <div class="h3-title">
-                  <h3>Kontaktieren Sie mich direkt</h3>
-                </div>
-                <div class="contact-options">
-                  <ul class="contact-options-list">
-                    <li>
-                      <a
-                        href="mailto: draculady@onmail.com"
-                        aria-label="Email me"
-                        target="_blank"
-                      >
-                        <i
-                          class="fa-regular fa-envelope"
-                          aria-hidden="true"
-                        ></i>
-                        <b title="draculady@onmail.com"> Email</b>
-                      </a>
-                    </li>
-                    <li>
-                      <a
-                        href="https://www.linkedin.com/in/kathrin-peled-draculady/"
-                        target="_blank"
-                        aria-label="LinkedIn profile"
-                      >
-                        <i class="fa-brands fa-linkedin" aria-hidden="true"></i>
-                        <b
-                          title="https://www.linkedin.com/in/kathrin-peled-draculady/"
-                        >
-                          LinkedIn</b
-                        >
-                      </a>
-                    </li>
-                    <li>
-                      <a
-                        href="https://github.com/DraculadyCode"
-                        target="_blank"
-                        aria-label="GitHub profile"
-                      >
-                        <i class="fa-brands fa-github" aria-hidden="true"></i>
-                        <b title="https://github.com/DraculadyCode">
-                          GitHub</b
-                        ></a
-                      >
-                    </li>
-                    <li>
-                      <a
-                        href="https://t.me/Draculady"
-                        target="_blank"
-                        rel="noopener noreferrer"
-                      >
-                        <i class="fab fa-telegram" aria-hidden="true"></i>
-                        <b title="Telegram">Telegram</b>
-                      </a>
-                    </li>
-                    <li>
-                      <a href="sms:+4917685639174" aria-label="Send SMS">
-                        <i
-                          class="fa-regular fa-comment-alt"
-                          aria-hidden="true"
-                        ></i>
-                        <b title="sms:+4917685639174">SMS</b>
-                      </a>
-                    </li>
-                    <li>
-                      <a
-                        href="https://www.facebook.com/profile.php?id=61563925780935"
-                        target="_blank"
-                        aria-label="facebook page"
-                      >
-                        <i class="fa-brands fa-facebook" aria-hidden="true"></i>
-                        <b
-                          title="https://www.facebook.com/profile.php?id=61563925780935"
-                        >
-                          Facebook</b
-                        ></a
-                      >
-                    </li>
-                    <li>
-                      <a
-                        href="https://x.com/DraculadyKath"
-                        target="_blank"
-                        aria-label="facebook page"
-                      >
-                        <i class="fa-brands fa-x-twitter"></i>
-                        <b title="https://x.com/DraculadyKath">
-                          Twitter/ X
-                        </b></a
-                      >
-                    </li>
-                  </ul>
-                </div>
-              </div>
+            <div class="files">
+              <ul class="files-list">
+                <li title="Translated to German">
+                  <a
+                    href="../Files/Diplom Übersetzung 2023.pdf"
+                    download
+                    aria-label="Download my diploma"
+                  >
+                    <i class="fa-solid fa-download" aria-hidden="true"></i>
+                    Lade mein<strong> Diplom </strong>herunter 🇩🇪
+                  </a>
+                </li>
+                <li title="Extended version of my CV">
+                  <a
+                    href="../Files/Kathrin Peled Resume 07.2024 .pdf"
+                    aria-label="Download my resume CV"
+                    download
+                  >
+                    <i class="fa-solid fa-file" aria-hidden="true"></i>
+
+                    Lade meinen vollständigen<strong> Lebenslauf </strong
+                    >herunter 🇬🇧
+                  </a>
+                </li>
+                <li title="Resume with relevant experience only">
+                  <a
+                    href="../Files/Kathrin Peled Professional Resume.pdf"
+                    aria-label="Download my professional resume"
+                    download
+                  >
+                    <i class="fa-regular fa-file" aria-hidden="true"></i>
+                    Lade meinen<strong> professionellen Lebenslauf </strong
+                    >herunter 🇬🇧
+                  </a>
+                </li>
+                <li title="Lebenslauf mit nur relevanter Erfahrung">
+                  <a
+                    href="../Files/Kathrin Peled Lebenslauf - Deutsch.pdf"
+                    download
+                    aria-label="Download my professional CV"
+                  >
+                    <i class="fa-regular fa-file" aria-hidden="true"></i>
+                    Lade meinen
+                    <strong>beruflichen Lebenslauf</strong> herunter 🇩🇪
+                  </a>
+                </li>
+              </ul>
             </div>
           </div>
         </div>
       </section>
-
-      <div class="backtotop">
-        <a href="#" aria-label="Zurück nach oben">
-          <span class="back-to">Nach</span> oben
-          <i class="fa-solid fa-up-long" aria-hidden="true"></i>
-        </a>
-      </div>
       <div class="languages">
-        <a
-          href="./contact-english.html"
-          aria-label="Change Language to English"
-        >
+        <a href="./files-english.html" aria-label="Sprache auf Englisch ändern">
           <p>
             Change <br />
             Language
@@ -308,8 +230,28 @@
 
           <img
             src="../Language Logos/English_Logo.webp"
-            alt="Change Language to Enlish"
+            alt="Sprache auf Englisch ändern"
           />
+        </a>
+      </div>
+
+      <div class="backtotop">
+        <a href="#" aria-label="Zurück nach oben">
+          <span class="back-to">Nach</span> oben
+          <i class="fa-solid fa-up-long" aria-hidden="true"></i>
+        </a>
+      </div>
+      <div class="hire-me">
+        <a href="./contact-deutsch.html#contact" aria-label="Hire me">
+          <div class="face">
+            <div class="eyes">
+              <div class="eye"></div>
+              <div class="eye"></div>
+            </div>
+          </div>
+          <div class="hire-me-textbox">
+            <p>Stellt mich ein</p>
+          </div>
         </a>
       </div>
     </main>
