--- a/Pages/portfolio-english.html
+++ b/Pages/portfolio-english.html
@@ -109,9 +109,9 @@
                 </li>
                 <li>
                   <a
-                    href="./files.html"
+                    href="./files-english.html"
                     aria-label="Download my files and documents"
-                    >Download My Files</a
+                    >My Files</a
                   >
                 </li>
               </ul>
@@ -150,7 +150,9 @@
               </ul>
             </li>
             <li>
-              <a href="./contact-english.html" aria-label="Contact">Contact</a>
+              <a href="./contact-english.html#contact" aria-label="Contact"
+                >Contact</a
+              >
             </li>
           </ul>
         </nav>
@@ -403,16 +405,6 @@
               <h3 id="second-module-heading">
                 Projects with HTML, CSS and JavaScript
               </h3>
-            </div>
-            <div class="paragraph-div">
-              <p>
-                <i class="fa-solid fa-quote-left" aria-hidden="true"></i>
-                In this section, you can explore examples of my projects from
-                the 3rd to the 6th month of my studies. <br />
-                Most of these projects are basic single-page websites.
-                <br />
-                <i class="fa-solid fa-quote-right" aria-hidden="true"></i>
-              </p>
             </div>
           </div>
           <div class="toolbox" aria-labelledby="toolbox-heading">
@@ -835,17 +827,6 @@
           <div class="introdution">
             <div class="h3-title">
               <h3 id="first-module-heading">Projects with HTML and CSS</h3>
-            </div>
-            <div class="paragraph-div">
-              <p>
-                <i class="fa-solid fa-quote-left" aria-hidden="true"></i>
-                In this section, you can explore examples of my projects from
-                the first three months of my studies. <br />
-                Most of these projects are single-page websites, with some being
-                responsive and a few incorporating Bootstrap for styling.
-                <br />
-                <i class="fa-solid fa-quote-right" aria-hidden="true"></i>
-              </p>
             </div>
           </div>
           <div class="toolbox" aria-labelledby="toolbox-heading">
