--- a/Pages/portfolio-german.html
+++ b/Pages/portfolio-german.html
@@ -97,18 +97,18 @@
         <nav>
           <ul>
             <li class="dropdown">
-              <a href="../index.html#about" aria-label="About">Über mich</a>
+              <a href="../index-german.html" aria-label="About">Über mich</a>
               <ul class="dropdown-portfolio">
                 <li>
                   <a
-                    href="./resume-english.html"
+                    href="./resume-german.html"
                     aria-label="Ineractive Resume Book"
                     >Mein Lebenslauf</a
                   >
                 </li>
                 <li>
                   <a
-                    href="./files.html"
+                    href="./files-german.html"
                     aria-label="Download my files and documents"
                     >Meine Dateien</a
                   >
@@ -413,16 +413,6 @@
               <h3 id="second-module-heading">
                 Projekte mit HTML, CSS und JavaScript
               </h3>
-            </div>
-            <div class="paragraph-div">
-              <p>
-                <i class="fa-solid fa-quote-left" aria-hidden="true"></i>
-                In diesem Abschnitt können Sie Beispiele meiner Projekte vom 3.
-                bis zum 6. Monat meines Studiums erkunden. <br />
-                Die meisten dieser Projekte sind grundlegende
-                Einzelseiten-Websites.Einzelne Seite
-                <i class="fa-solid fa-quote-right" aria-hidden="true"></i>
-              </p>
             </div>
           </div>
           <div class="toolbox" aria-labelledby="toolbox-heading">
@@ -852,18 +842,6 @@
           <div class="introdution">
             <div class="h3-title">
               <h3 id="module-heading">Projekte mit HTML und CSS</h3>
-            </div>
-            <div class="paragraph-div">
-              <p>
-                <i class="fa-solid fa-quote-left" aria-hidden="true"></i>
-
-                In diesem Abschnitt können Sie Beispiele meiner Projekte aus den
-                ersten drei Monaten meines Studiums erkunden. <br />
-                Die meisten dieser Projekte sind Einzelseiten-Websites, wobei
-                einige reaktionsschnell sind und einige Bootstrap für das
-                Styling verwenden.
-                <i class="fa-solid fa-quote-right" aria-hidden="true"></i>
-              </p>
             </div>
           </div>
           <div class="toolbox" aria-labelledby="toolbox-heading">
