--- a/Pages/resume-german.html
+++ b/Pages/resume-german.html
@@ -107,7 +107,7 @@
                 </li>
                 <li>
                   <a
-                    href="./files.html"
+                    href="./files-german.html"
                     aria-label="Download my files and documents"
                     >Meine Dateien</a
                   >
