--- a/index-german.html
+++ b/index-german.html
@@ -95,7 +95,9 @@
         <nav>
           <ul>
             <li class="dropdown">
-              <a href="../index.html#about" aria-label="About">Über mich</a>
+              <a href="./index-german.html#about" aria-label="About"
+                >Über mich</a
+              >
               <ul class="dropdown-portfolio">
                 <li>
                   <a
@@ -106,7 +108,7 @@
                 </li>
                 <li>
                   <a
-                    href="./Pages/files.html"
+                    href="./Pages/files-german.html"
                     aria-label="Download my files and documents"
                     >Meine Dateien</a
                   >
