--- a/index.html
+++ b/index.html
@@ -113,9 +113,10 @@
                 </li>
                 <li>
                   <a
-                    href="./Pages/files.html"
+                    href="./Pages/files-english.html"
                     aria-label="Download my files and documents"
-                    >Download My Files</a
+                  >
+                    My Files</a
                   >
                 </li>
               </ul>
