--- a/Pages/resume-mobile-german.html
+++ b/Pages/resume-mobile-german.html
@@ -107,7 +107,7 @@
                 </li>
                 <li>
                   <a
-                    href="./files.html"
+                    href="./files-german.html"
                     aria-label="Download my files and documents"
                     >Meine Dateien</a
                   >
@@ -526,9 +526,6 @@
       </div>
     </footer>
     <script src="../Scripts/script.js"></script>
-    <script src="../Scripts/resume.js"></script>
-    <script src="../Scripts/transfer-resume.js"></script>
-
     <!-- Async or defer for external scripts -->
 
     <script>
