--- a/Pages/portfolio-german.html
+++ b/Pages/portfolio-german.html
@@ -19,6 +19,8 @@
       property="og:url"
       content="https://www.facebook.com/profile.php?id=61563925780935"
     />
+    <meta name="color-scheme" content="light only">
+
     <meta name="author" content="Kathrin Peled Draculady" />
     <meta name="robots" content="index, follow" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
