removed paragraphs from portfolios

--- a/Pages/contact-deutsch.html
+++ b/Pages/contact-deutsch.html
@@ -19,7 +19,7 @@
       property="og:url"
       content="https://www.facebook.com/profile.php?id=61563925780935"
     />
-    <meta name="color-scheme" content="light only">
+    <meta name="color-scheme" content="light only" />
 
     <meta name="author" content="Kathrin Peled Draclady" />
     <meta name="robots" content="index, follow" />
@@ -276,11 +276,59 @@
                       <a
                         href="https://x.com/DraculadyKath"
                         target="_blank"
-                        aria-label="facebook page"
+                        aria-label="Twitter X page"
                       >
                         <i class="fa-brands fa-x-twitter"></i>
                         <b title="https://x.com/DraculadyKath">
                           Twitter/ X
+                        </b></a
+                      >
+                    </li>
+                    <li>
+                      <a
+                        href="https://app.netlify.com/teams/draculadycode/sites"
+                        target="_blank"
+                        aria-label="Netlify page"
+                      >
+                        <i
+                          class="bx bxl-netlify"
+                          aria-hidden="true"
+                          alt="Netlify Logo"
+                        ></i>
+                        <b
+                          title="https://app.netlify.com/teams/draculadycode/sites"
+                        >
+                          Netlify
+                        </b></a
+                      >
+                    </li>
+                    <li>
+                      <a
+                        href="https://vercel.com/kathrins-projects-926c884c"
+                        target="_blank"
+                        aria-label="Vercel page"
+                      >
+                        <i
+                          class="bx bxs-up-arrow"
+                          aria-hidden="true"
+                          alt="Vercel Logo"
+                        ></i>
+                        <b
+                          title="https://vercel.com/kathrins-projects-926c884c"
+                        >
+                          Vercel
+                        </b></a
+                      >
+                    </li>
+                    <li>
+                      <a
+                        href="https://github.com/KathrinKath"
+                        target="_blank"
+                        aria-label="GitHub Student page"
+                      >
+                        <i class="fa-brands fa-square-github"></i>
+                        <b title="https://github.com/KathrinKath">
+                          GitHub (Student)
                         </b></a
                       >
                     </li>
