--- a/Pages/portfolio-english.html
+++ b/Pages/portfolio-english.html
@@ -20,7 +20,7 @@
       property="og:url"
       content="https://www.facebook.com/profile.php?id=61563925780935"
     />
-    <meta name="color-scheme" content="light only">
+    <meta name="color-scheme" content="light only" />
 
     <meta name="author" content="Kathrin Peled Draculady" />
     <meta name="robots" content="index, follow" />
@@ -173,39 +173,27 @@
             <div class="paragraph-div">
               <p>
                 <i class="fa-solid fa-quote-left" aria-hidden="true"></i>
-                I'm excited to share examples of some of the projects I've
-                worked on during my time in the "Web Development" course. <br />
-                I believe that whether they are small or large, my projects
-                represent the motivation and dedication I've invested in them.
-                <br />
-
-                In the description of each project, you can learn about its
-                purpose, responsiveness, and whether it's a single-page or
-                multi-page project. <br />
-                These projects, both older and newer, are milestones in my
-                learning journey here at DCI School. <br />
-
-                Your experience on my website is highly meaningful to me. <br />
-                Therefore, I have meticulously designed the page with compressed
-                images and file minimization, ensuring that the website
-                functions smoothly even on mobile data or low-speed internet
-                connections. <br />
-
-                I invite you to explore my projects, assess them, and gain an
-                impression of my work and skills. <br />
-                You can also follow my progress via my Student GitHub account:
+                Hey there! Welcome to my portfolio! I'm excited to share some
+                projects I worked on during my "Web Development" course. They
+                show my journey and the effort I've put in, whether big or
+                small. Each project is designed to work well and load quickly,
+                even on mobile. I’m always updating my work, so feel free to
+                check it out and see what I’ve been up to. You can also follow
+                my progress on my Student GitHub account:
                 <a
                   href="https://github.com/KathrinKath"
                   target="_blank"
                   aria-label="GitHub student account"
-                  ><i class="fa-brands fa-square-github" aria-hidden="true"></i
-                ></a>
-
+                >
+                  <i class="fa-brands fa-square-github" aria-hidden="true"></i>
+                </a>
                 <i class="fa-solid fa-quote-right" aria-hidden="true"></i>
               </p>
             </div>
             <div class="paragraph-div elements-table-div">
               <p>
+                <i class="fa-regular fa-message"></i>
+
                 To facilitate the visualization of my projects and enable users
                 to quickly identify specific skills, I have incorporated icons
                 to indicate the key elements present in each project. <br />
