--- a/Pages/portfolio-german.html
+++ b/Pages/portfolio-german.html
@@ -19,7 +19,7 @@
       property="og:url"
       content="https://www.facebook.com/profile.php?id=61563925780935"
     />
-    <meta name="color-scheme" content="light only">
+    <meta name="color-scheme" content="light only" />
 
     <meta name="author" content="Kathrin Peled Draculady" />
     <meta name="robots" content="index, follow" />
@@ -174,45 +174,28 @@
             <div class="paragraph-div">
               <p>
                 <i class="fa-solid fa-quote-left" aria-hidden="true"></i>
-                Ich freue mich darauf, Beispiele einiger Projekte zu teilen, an
-                denen ich während meiner Zeit im Kurs "Webentwicklung"
-                gearbeitet habe. <br />
-                Ich glaube, dass meine Projekte, ob klein oder groß, die
-                Motivation und Hingabe repräsentieren, die ich in sie investiert
-                habe. <br />
-
-                In der Beschreibung jedes Projekts erfahren Sie mehr über dessen
-                Zweck, Reaktionsfähigkeit und ob es sich um ein Einzel- oder
-                Mehrseitenprojekt handelt. <br />
-                Diese Projekte, sowohl ältere als auch neuere, sind Meilensteine
-                in meiner Lernreise hier an der DCI School. <br />
-
-                Ihre Erfahrung auf meiner Website ist für mich sehr bedeutsam.
-                <br />
-                Daher habe ich die Seite sorgfältig mit komprimierten Bildern
-                und Dateiminimierung gestaltet, um sicherzustellen, dass die
-                Website reibungslos funktioniert, auch bei mobilen
-                Datenverbindungen oder langsamen Internetverbindungen. <br />
-
-                Ich lade Sie ein, meine Projekte zu erkunden, sie zu bewerten
-                und sich einen Eindruck von meiner Arbeit und meinen Fähigkeiten
-                zu verschaffen.
-                <br />
-                Sie können auch meinen Fortschritt über mein
-                Student-GitHub-Konto verfolgen:
+                Hey! Willkommen in meinem Portfolio! Ich freue mich, einige
+                Projekte zu teilen, an denen ich während meines Kurses
+                "Webentwicklung" gearbeitet habe. Sie zeigen meinen Weg und den
+                Aufwand, den ich hineingesteckt habe, egal ob groß oder klein.
+                Jedes Projekt ist so gestaltet, dass es gut funktioniert und
+                schnell lädt, sogar auf mobilen Geräten. Ich aktualisiere meine
+                Arbeiten ständig, also schau gerne vorbei und sieh dir an, was
+                ich so mache. Du kannst auch meinen Fortschritt auf meinem
+                Student GitHub-Konto verfolgen:
                 <a
                   href="https://github.com/KathrinKath"
                   target="_blank"
-                  aria-label="Student-GitHub-Konto link"
+                  aria-label="GitHub student account"
                 >
                   <i class="fa-brands fa-square-github" aria-hidden="true"></i>
                 </a>
-
                 <i class="fa-solid fa-quote-right" aria-hidden="true"></i>
               </p>
             </div>
             <div class="paragraph-div elements-table-div">
               <p>
+                <i class="fa-regular fa-message"></i>
                 Um die Visualisierung meiner Projekte zu erleichtern und es den
                 Benutzern zu ermöglichen, schnell bestimmte Fähigkeiten zu
                 identifizieren, habe ich Icons eingefügt, um die
