--- a/index-german.html
+++ b/index-german.html
@@ -19,7 +19,7 @@
       property="og:url"
       content="https://www.facebook.com/profile.php?id=61563925780935"
     />
-    <meta name="color-scheme" content="light only">
+    <meta name="color-scheme" content="light only" />
 
     <meta name="author" content="Kathrin Peled Draclady" />
     <meta name="robots" content="index, follow" />
@@ -229,95 +229,6 @@
         <div class="container">
           <div class="h2-title">
             <h2 id="portfolio-heading">Mein Portfolio</h2>
-          </div>
-          <div class="paragraph-div">
-            <div class="paragraph-opener">
-              <p>
-                <i class="fa-solid fa-quote-left" aria-hidden="true"></i>
-                Willkommen in meinem Portfolio! <br />
-                Als Webentwicklerin freue ich mich, Ihnen die Projekte zu
-                präsentieren, die mein Engagement für Exzellenz in Design und
-                Funktionalität widerspiegeln. <br />
-                Jede Website in meinem Portfolio ist sorgfältig mit einem
-                Schwerpunkt auf leichtem Design erstellt, um optimale Leistung
-                und schnelle Ladezeiten zu gewährleisten. <br />
-                Ich glaube an kontinuierliche Verbesserung, verfeinere meine
-                Kreationen ständig mit neuen Ideen und Upgrades, um immer einen
-                Schritt voraus zu sein. <br />
-                Darüber hinaus priorisiere ich Barrierefreiheit, optimiere die
-                Benutzererfahrung für mobile Nutzer, indem ich Animationen und
-                Effekte minimiere, um den mobilen Datenverbrauch zu schonen.
-                <br />
-                Während meiner Zeit bei DCI in diesem Jahr bin ich bestrebt, die
-                Website aktuell zu halten und regelmäßig neue und aktualisierte
-                Projekte hochzuladen, die meinen Fortschritt und meine neu
-                erworbenen Fähigkeiten zeigen. <br />
-                Ich lade potenzielle Arbeitgeber ein, meine Projekte zu erkunden
-                und aus erster Hand die Hingabe und Innovation hinter jedem
-                einzelnen zu erleben. <br />
-                <span style="white-space: wrap">
-                  Sie können auch meine persönlichen Projekte ansehen, die ich
-                  in meiner Freizeit erstellt habe, <br />
-                  und mein <em>GitHub <strong>Studentenkonto</strong></em> mit
-                  all den Projekten, die ich bei DCI gemacht habe und noch daran
-                  arbeite, <br />
-                  hier ansehen: </span
-                ><br />
-              </p>
-            </div>
-            <div class="platforms-links">
-              <div class="netlify-link">
-                <b>Netlify:</b>
-                <div class="link-div">
-                  <a
-                    href="https://app.netlify.com/teams/draculadycode/sites"
-                    target="_blank"
-                    aria-label="Netlify account link"
-                    ><i
-                      class="bx bxl-netlify"
-                      aria-hidden="true"
-                      alt="Netlify Logo"
-                    ></i
-                  ></a>
-                </div>
-              </div>
-              <div class="vercel-link">
-                <b>Vercel:</b>
-                <div class="link-div">
-                  <a
-                    href="https://vercel.com/kathrins-projects-926c884c"
-                    target="_blank"
-                    aria-label="Vercel account link"
-                    ><i
-                      class="bx bxs-up-arrow"
-                      aria-hidden="true"
-                      alt="Vercel Logo"
-                    ></i
-                  ></a>
-                </div>
-              </div>
-              <div class="github-student-link">
-                <b>GitHub:</b>
-                <div class="link-div">
-                  <a
-                    href="https://github.com/KathrinKath"
-                    target="_blank"
-                    aria-label="GitHub student account link"
-                    ><i
-                      class="fa-brands fa-square-github"
-                      aria-hidden="true"
-                      alt="GitHub Logo"
-                    ></i
-                  ></a>
-                </div>
-              </div>
-            </div>
-            <div class="paragraph closer">
-              <p>
-                Genießen Sie Ihre Zeit!
-                <i class="fa-solid fa-quote-right" aria-hidden="true"></i>
-              </p>
-            </div>
           </div>
           <div class="h3-title">
             <h3 class="carousel-title">Lieblingsprojekte</h3>
